# 2048_reinforcement_learning

./: .gitignore  LICENSE  README.md  pyproject.toml
rl_2048/: bitboard.py  expectimax.py  game.py  inference.py  network.py  profiler.py
rl_2048/afterstate/: agent.py  config.py  replay_buffer.py  train.py
rl_2048/dqn/: agent.py  config.py  network.py  replay_buffer.py  train.py
rl_2048/ntuple/: config.py  network.py  train.py
rust_2048/: Cargo.toml  README.md
rust_2048/src/: board.rs  expectimax.rs  lib.rs  ntuple.rs  train.rs
rust_2048_py/: Cargo.toml  pyproject.toml
rust_2048_py/src/: lib.rs
scripts/: evaluate_search.py  play.py  play_web.py  play_web_rust.py  train_afterstate.py  train_dqn.py  train_ntuple.py  watch_agent.py
tests/: test_bitboard.py  test_expectimax.py  test_game.py
tests/afterstate/: test_agent.py  test_replay_buffer.py
tests/dqn/: test_agent.py  test_network.py  test_replay_buffer.py
tests/ntuple/: test_network.py
