[package]
name = "rust_2048"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
dotenvy = "0.15"
flate2 = "1"
headless_chrome = "1"
rand = "0.9"
serde_json = "1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
